--- a/css/style.css
+++ b/css/style.css
@@ -210,7 +210,8 @@ h3{
   margin-bottom: 150px;
 }
 
-.who_we_are-intro{
+.who_we_are-intro,
+.activities-intro{
   font-size: 20px;
   font-weight: 700;
   margin-bottom: 20px;
@@ -219,7 +220,6 @@ h3{
 h1{
   font-size: 64px;
   font-weight: 800;
-  margin-bottom: 100px;
 }
 
 .who_we_are-list{
@@ -227,6 +227,7 @@ h1{
   flex-wrap: wrap;
   gap: 10px 10px;
   margin-bottom: 256px;
+  margin-top: 100px;
   font-size: 26px;
   font-weight: 700;
 }
@@ -261,4 +262,47 @@ h1{
   bottom: 46px;
   right: 68px;
   white-space: nowrap;
+}
+
+.activities__inner{
+  margin-bottom: 100px;
+}
+
+.activities__content{
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 0 20px;
+  margin-bottom: 100px;
+}
+
+.activities-text{
+  padding-top: 10px;
+  margin-bottom: 36px;
+}
+
+.activities-list{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  /* padding: 20px; */
+}
+
+.activities-item{
+  flex: 1;
+  min-width: 344px;
+  height: 344px;
+  font-size: 26px;
+  font-weight: 700;
+  border: 1px solid #2B2A29;
+  border-radius: 500px;
+  padding: 138px 125px;
+  text-align: center;
+  align-items: center;
+  display: flex;
+  justify-content: center;
+}
+
+.activities-item span{
+  min-width: 118px;
 }
