--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,15 @@ h1, h2, h3, p, blockquote{
   margin: 0;
 }
 
+h1{
+  font-size: 64px;
+  font-weight: 800;
+}
+
+h3{
+  font-size: 32px;
+}
+
 button{
   font-size: 32px;
   border: 1px solid #2B2A29;
@@ -147,10 +156,6 @@ body{
   font-weight: 800;
 }
 
-h3{
-  font-size: 32px;
-}
-
 .header__moreinfo-title{
   margin: 50px 20px 10px 20px;
   font-weight: 800;
@@ -206,8 +211,14 @@ h3{
 .who_we_are__inner{
   display: flex;
   justify-content: space-between;
-  gap: 0 310px;
   margin-bottom: 150px;
+}
+
+.who_we_are__content{
+  display: flex;
+  flex-direction: column;
+  max-width: 560px;
+  margin-right: auto;
 }
 
 .who_we_are-intro,
@@ -217,16 +228,11 @@ h3{
   margin-bottom: 20px;
 }
 
-h1{
-  font-size: 64px;
-  font-weight: 800;
-}
-
 .who_we_are-list{
   display: flex;
   flex-wrap: wrap;
   gap: 10px 10px;
-  margin-bottom: 256px;
+  margin-bottom: auto;
   margin-top: 100px;
   font-size: 26px;
   font-weight: 700;
@@ -242,17 +248,18 @@ h1{
 }
 
 .who_we_are-text-pt1{
-  margin-bottom: 20px;
+  margin: 20px 0;
 }
 
 .who_we_are-pic{
   position: relative;
-  display: inline-block;
 }
 
 .who_we_are-img{
-  display: block;
-  /* width: 100%; */
+  display: inline-block;
+  max-width: 851px;
+  max-height: 1000px;
+  width: 100%;
 }
 
 .act_btn.light{
@@ -261,7 +268,6 @@ h1{
   position: absolute;
   bottom: 46px;
   right: 68px;
-  white-space: nowrap;
 }
 
 .activities__inner{
@@ -282,15 +288,16 @@ h1{
 
 .activities-list{
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   width: 100%;
-  /* padding: 20px; */
+  flex-wrap: wrap;
 }
 
 .activities-item{
   flex: 1;
   min-width: 344px;
+  max-width: 344px;
   height: 344px;
   font-size: 26px;
   font-weight: 700;
