--- a/css/style.css
+++ b/css/style.css
@@ -344,11 +344,11 @@ section{
 }
 
 .surf {
-  margin-left: -100px;
-  margin-right: -100px;
-  max-width: 100%;
   display: flex;
   justify-content: center;
+  margin-left: -50vw;
+  margin-right: -50vw;
+  position: relative;
 }
 
 .surf-pic img{
