--- a/css/style.css
+++ b/css/style.css
@@ -70,7 +70,7 @@ body{
   z-index: 1000;
 }
 
-.header__top{
+.header-top{
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -80,7 +80,7 @@ body{
   font-weight: 700;
 }
 
-.menu__list{
+.header-menu{
   display: flex;
   align-items: center;
   gap: 0 40px;
@@ -88,7 +88,7 @@ body{
   padding-right: 20px;
 }
 
-.header__contact-phone{
+.header-phone{
   padding: 10px 20px 10px 54px;
   background-color: #0A507A;
   color: white;
@@ -96,7 +96,7 @@ body{
   position: relative;
 }
 
-.header__contact-phone::before{
+.header-phone::before{
   content: '';
   position: absolute;
   left: 20px;
@@ -487,7 +487,7 @@ h4{
 }
 
 @media (max-width: 1410px){
-  .header__top{
+  .header-top{
     flex-wrap: wrap;
     gap: 20px 0;
   }
@@ -503,7 +503,7 @@ h4{
   .banner__advantages-list{
     font-size: 20px;
   }
-  .menu__list{
+  .header-menu{
     white-space: nowrap;
     flex-wrap: wrap;
   }
